sort.pancake.BasicPancake.scala.error
Erreur de compilation :
BasicPancake:10: error: unclosed character literal
      print (a + b +'   ')
                    ^BasicPancake:10: error: unclosed character literal
      print (a + b +'   ')
                        ^BasicPancake:10: error: ')' expected but something found.
      print (a + b +'   ')
                    ^